--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 
 @layer base {
-    body {
+    html {
         background-color: #fafafa;
         font-family: "Epilogue", sans-serif;
     }
@@ -13,7 +13,7 @@
 
 @layer components {
     .shadowCustom {
-        box-shadow: 4px 9px 15px -6px rgba(0, 0, 0, 0.34);
-        -webkit-box-shadow: 4px 9px 15px -6px rgba(0, 0, 0, 0.34);
+        box-shadow: 2px 5px 24px 2px rgba(0, 0, 0, 0.5);
+        -webkit-box-shadow: 2px 5px 24px 2px rgba(0, 0, 0, 0.5);
     }
 }
